# clickhouse-sidecar

./: .gitignore  README.md  bench_sidecar.mjs  clickhouse_sidecar.py  debug_proxy.py  docker-compose.yml  dump_conf.xml  fullreport.md  get_config.py  get_def_conf.py  package.json  patch.py  patch2.py  patch3.py  patch4.py  patch5.py  read_logs.py  runalltests.sh  standard-hard-bench.mjs  standard-hard-test.mjs  test-flush.mjs  test-inline.sql  test-ports.py  test_ch.py  test_ch2.py  test_ch3.py  test_ch_unix.py  test_ch_unix_sock.py  test_fullstack_app.mjs  test_library.py  test_node_e2e.mjs  test_proxy.py  test_python_e2e.py  test_suite.mjs  test_suite.py
debug-db-node/: config.xml
debug-db-node-tests/: config.xml
debug-db-proxy-test/: config.xml  users.xml
debug-db-tests/: config.xml
example/: basic.ts  package.json
js-example/: basic.ts
js-lib/: index.d.ts  index.mjs
js-stress/: poc-false-negative.mjs  poc-false-positive.mjs  worker.mjs
leased-clickhouse/: index.d.ts  index.mjs  package.json
node-pkg/: README.md  index.d.ts  index.mjs  package.json
poc1/: package.json
poc2/: false-negative.mjs  false-positive.mjs  package.json
py-stress/: poc_false_negative.py  stress.py  worker.py
python/: README.md  pyproject.toml
python-pkg/: README.md  clickhouse_sidecar.py  setup.py
python/example/: main.py
python/stresstest/: stress.py
stresstest/: package.json  poc-premature.mjs  poc-test-gc-ch.mjs  poc-zombie.mjs  test.mjs  worker.mjs
tests/: debug_gc.py  debug_url.py  poc_false_positive.py  test_basic.py  test_stress.py  worker.py
(+20 files in other folders)
