[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clickhouse-sidecar"
version = "1.0.0"
description = "A zero-config embedded ClickHouse manager for Python."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "clickhouse-connect>=0.6.0"
]

[tool.setuptools]
py-modules = ["clickhouse_sidecar"]
